--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-alembic==1.10.3
-Flask==2.2.3
-Flask_Login==0.6.2
-Flask_Migrate==4.0.4
-flask_sqlalchemy==3.0.3
-Flask_WTF==1.1.1
-MySQL-python==1.2.5
-PyMySQL==1.0.3
-Requests==2.31.0
-SQLAlchemy==2.0.9
-Werkzeug==2.2.3
-WTForms==3.0.1
+alembic
+Flask
+flask_login
+flask_migrate
+flask_sqlalchemy
+flask_wtf
+mysqlclient
+pymysql
+python-dotenv
+Requests
+SQLAlchemy
+Werkzeug
+WTForms
+email_validator
