--- a/env.example
+++ b/env.example
@@ -29,4 +29,4 @@ FLASK_APP_REPO=digital_cv
 FLASK_APP_PORT=8000
 FLASK_APP_DOMAIN=zerodaypoke.com
 FLASK_APP_ENV=development
-FLASK_APP_DEBUG=True
+FLASK_DEBUG=True
